[FIX] -> added jwt from registred user for preguntas test controller [IMPRV] -> logic in register and login passed to service